# startup-ai-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  WORKFLOW_STATE.md  docker-compose.yml  docker-entrypoint.sh  opencode.json  pyproject.toml  requirements.txt  run.sh
.opencode/agents/: implementor.md  planner.md  reviewer.md  supervisor.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/test-runner/: SKILL.md
.opencode/skills/workflow-state/: SKILL.md
data/: image-mapping.json  knowledge.json
migrations/: env.py
migrations/versions/: 2bdf4326046f_initial.py
scripts/: associate_images.py  generate_dummy_data.py  ingest_pdfs.py  seed_knowledge.py  sync_data.py
src/: chunking.py  cli.py  config.py  logging.py  memory.py  server.py
src/core/: __init__.py  interfaces.py  types.py
src/database/: __init__.py  connection.py  models.py
src/ingestion/: pipeline.py
src/knowledge/: __init__.py  store.py
src/llm/: client.py  embeddings.py
src/response/: generator.py
src/retrieval/: vector_store.py
tests/: conftest.py  test_chunking.py  test_core.py  test_llm.py  test_memory.py  test_pipeline.py  test_server.py  test_whatsapp.py
